# data-visualization

./: .gitignore  CMakeLists.txt  README.md
data/: edges_dataset_example.csv  interesting-data.csvg
src/: CMakeLists.txt  main.cpp
src/AppController/: CMakeLists.txt  appController.cpp  appController.h
src/Core/: CMakeLists.txt  core.cpp  core.h  dataset.cpp  dataset.h  graph.cpp  graph.h  quadtree.cpp  quadtree.h
src/Theme/: CMakeLists.txt  theme.h
src/UI/: CMakeLists.txt  UiPages.h  dataPage.cpp  dataPage.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  menuPage.cpp  menuPage.h  visualizePage.cpp  visualizePage.h
src/UI/Graph/: CMakeLists.txt  graphDisplay.cpp  graphDisplay.h
